code now calculates xT for every player

--- a/pass-xT.ipynb
+++ b/pass-xT.ipynb
@@ -76,6 +76,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playersxT = {}\n",
+    "for match in matchIDs:        \n",
+    "    with open('../Statsbomb/data/events/' + str(match) + '.json',encoding='utf') as file:\n",
+    "        events = json.load(file)\n",
+    "        for event in events:\n",
+    "            if event[\"type\"][\"name\"] == \"Pass\":\n",
+    "                try:\n",
+    "                    x = event[\"pass\"][\"outcome\"]\n",
+    "                except:\n",
+    "                    if event[\"team\"][\"name\"] == \"Barcelona\" :\n",
+    "                        value = xT(event[\"pass\"][\"end_location\"]) - xT(event[\"location\"])\n",
+    "                        if event[\"player\"][\"name\"] not in playersxT.keys():\n",
+    "                            playersxT[event[\"player\"][\"name\"]] = value \n",
+    "                        else:\n",
+    "                            playersxT[event[\"player\"][\"name\"]] += value \n",
+    "            if event[\"type\"][\"name\"] == \"Carry\":\n",
+    "                if event[\"team\"][\"name\"] == \"Barcelona\" :\n",
+    "                    value = xT(event[\"carry\"][\"end_location\"]) - xT(event[\"location\"])\n",
+    "                    if event[\"player\"][\"name\"] not in playersxT.keys():\n",
+    "                        playersxT[event[\"player\"][\"name\"]] = value \n",
+    "                    else:\n",
+    "                        playersxT[event[\"player\"][\"name\"]] += value \n",
+    "    file.close()\n",
+    "\n",
+    "playersxT"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
