new column for mean

--- a/attack_direction.ipynb
+++ b/attack_direction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/statsbombpy/api_client.py:20: NoAuthWarning: credentials were not supplied. open data access only\n",
+      "C:\\Users\\Lawrence\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\statsbombpy\\api_client.py:20: NoAuthWarning: credentials were not supplied. open data access only\n",
       "  warnings.warn(\"credentials were not supplied. open data access only\", NoAuthWarning)\n"
      ]
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,33 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/statsbombpy/api_client.py:20: NoAuthWarning: credentials were not supplied. open data access only\n",
-      "  warnings.warn(\"credentials were not supplied. open data access only\", NoAuthWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "3868    28\n",
-       "3869    31\n",
-       "3870    37\n",
-       "4336    29\n",
-       "4337    40\n",
-       "4338    40\n",
-       "4390    26\n",
-       "4443    26\n",
-       "4569    25\n",
-       "Name: second, dtype: int64"
+       "22.9"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,6 +108,7 @@
     "    #Creates new data frames, dont know if this is necessary\n",
     "    previous_events = pd.DataFrame()\n",
     "    ten_previous_events = pd.DataFrame()\n",
+    "    ten_previous_events['y_location'] = np.nan\n",
     "    #Iterates through each shot event and find the events in an entire minute previous, ONLY COUNTS THE EVENTS IF THEY WERE IN THE SAME 'POSSESSION'\n",
     "    for i,row in shot_minute.iterrows():\n",
     "        \n",
@@ -145,40 +129,19 @@
     "        blah = ten_previous_events.minute\n",
     "        ble = ten_previous_events.second\n",
     "        \n",
-    "    \n",
+    "        for j,row in ten_previous_events.iterrows():\n",
+    "            ten_previous_events.loc[j,'y_location'] = row.location[1]\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "blah\n",
-    "ble\n",
-    "# goal_minute"
+    "ten_previous_events.y_location.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0       00:00:00.000\n",
-      "1       00:00:00.000\n",
-      "2       00:00:00.000\n",
-      "3       00:00:00.000\n",
-      "4       00:00:00.000\n",
-      "            ...     \n",
-      "4801    00:22:29.142\n",
-      "4802    00:24:19.938\n",
-      "4803    00:32:54.863\n",
-      "4804    00:33:20.116\n",
-      "4805    00:34:14.928\n",
-      "Name: timestamp, Length: 4806, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n"
@@ -204,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
