--- a/attack_direction.ipynb
+++ b/attack_direction.ipynb
@@ -413,6 +413,8 @@
     "\n",
     "#data could be cleaned \n",
     "# remove all data that is just a single shot ie. penalties, or to go further, data which is only 5 touches build up?\n",
+    "\n",
+    "# Is there a better way to decide what part of the pitch an attack has come from?, median of all touches in the build up?\n",
     "\n"
    ]
   },
