--- a/player_pass_map.ipynb
+++ b/player_pass_map.ipynb
@@ -117,6 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Selects all the passes of a specific player\n",
     "player = 'Lionel Andrés Messi Cuccittini'\n",
     "player_passes = season_barcelona_passes[season_barcelona_passes.player == player]\n",
     "\n",
@@ -144,6 +145,8 @@
     "            pitch_color='grass', line_color='#c7d5cc', figsize=(13.5, 8),\n",
     "            constrained_layout=True, stripe=True, tight_layout=False)\n",
     "fig, ax = pitch.draw()\n",
+    "\n",
+    "#Iterates through all the passes and plots different outcomes in different colours\n",
     "for i,row in player_passes.iterrows():\n",
     "    start_loc = row.location\n",
     "    end_loc = row.pass_end_location\n",
