Added combined scoring

--- a/pass-xT.ipynb
+++ b/pass-xT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +76,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Lionel Andrés Messi Cuccittini': 23.81225338000007,\n",
+       " 'Ousmane Dembélé': 6.402278439999996,\n",
+       " 'Sergio Busquets i Burgos': 5.422392220000017,\n",
+       " 'Sergino Dest': 2.679686669999989,\n",
+       " 'Óscar Mingueza García': 2.4430450400000048,\n",
+       " 'Frenkie de Jong': 4.581067459999993,\n",
+       " 'Clément Lenglet': 5.267802529999989,\n",
+       " 'Marc-André ter Stegen': 0.7737900899999975,\n",
+       " 'Jordi Alba Ramos': 10.97988079000002,\n",
+       " 'Pedro González López': 2.0218321699999975,\n",
+       " 'Antoine Griezmann': 2.777358930000002,\n",
+       " 'Ronald Federico Araújo da Silva': 0.7456351199999998,\n",
+       " 'Moriba Kourouma Kourouma': 0.5523298499999996,\n",
+       " 'Francisco António Machado Mota de Castro Trincão': 0.15380217999999996,\n",
+       " 'Ricard Puig Martí': 0.61336465,\n",
+       " 'Martin Braithwaite Christensen': -0.20231261999999975,\n",
+       " 'Gerard Piqué Bernabéu': 1.8737744199999977,\n",
+       " 'Sergi Roberto Carnicer': 2.026318290000003,\n",
+       " 'Samuel Yves Umtiti': 0.6661864700000002,\n",
+       " 'Miralem Pjanić': 1.632630570000001,\n",
+       " 'Philippe Coutinho Correia': 1.7922680100000024,\n",
+       " 'Héctor Junior Firpo Adames': 0.2761439599999998,\n",
+       " 'Anssumane Fati': 1.7687659500000008,\n",
+       " 'Norberto Murara Neto': 0.09667133999999998,\n",
+       " 'Carles Aleña Castillo': 0.018155429999999993}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "playersxT = {}\n",
     "for match in matchIDs:        \n",
@@ -109,7 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playersxT_df = pandas.Series(playersxT)\n",
+    "playersxT_df.to_csv('player_xT.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
