Exported pd table to excel

--- a/top_players.ipynb
+++ b/top_players.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "23  0.008487  0.189821  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "24                             Carles Aleña Castillo   0.018155"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
        "24         0.000000  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
        "24         0.000000  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
        "10               Antoine Griezmann  0.124078         0.989831  0.556955"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,17 @@
     "#Average score\n",
     "player_ranking['score'] = (player_ranking.xT + player_ranking.mean_centrality)/2\n",
     "player_ranking = player_ranking.sort_values(by='score',ascending =False)\n",
-    "player_ranking.head(5)"
+    "top_5 = player_ranking.head(5)\n",
+    "top_5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_5.to_excel('player_ranking.xlsx')"
    ]
   }
  ],
@@ -1128,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
