--- a/attack_direction.ipynb
+++ b/attack_direction.ipynb
@@ -520,7 +520,7 @@
     "\n",
     "\n",
     "    \n",
-    "\n",
+    "    # Creates counter for what direction an attack is coming from\n",
     "    left = 0\n",
     "    middle = 0\n",
     "    right = 0\n",
@@ -542,6 +542,7 @@
     "    mid_list.append(middle_av)\n",
     "    right_list.append(right_av)\n",
     "    \n",
+    "    # Plotting pitch and bars\n",
     "    \n",
     "    pitch = Pitch(pitch_type='statsbomb', orientation='horizontal',\n",
     "            pitch_color='grass', line_color='#c7d5cc', figsize=(13.5, 8),\n",
@@ -585,7 +586,7 @@
     }
    ],
    "source": [
-    "#Average for the season\n",
+    "#Same code as above but sums all the results as an average for the season\n",
     "\n",
     "\n",
     "season_left_av = np.mean(left_list)\n",
@@ -618,187 +619,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Cell magic `%%%` not found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "%%% code for having 4 sections of the pitch %%%\n",
-    "\n",
-    "#Defines the sections of th pitch horizontally\n",
-    "    # far_left_quater = 0\n",
-    "    # left_mid_quater = 0\n",
-    "    # right_mid_quater = 0\n",
-    "    # far_right_quater = 0\n",
-    "    # num_shots = len(attack_mean_list)\n",
-    "    # for i in range(num_shots):\n",
-    "    #     if attack_mean_list[i] <=20:\n",
-    "    #         far_left_quater +=1\n",
-    "    #     elif 20<attack_mean_list[i]<=40:\n",
-    "    #         left_mid_quater +=1\n",
-    "    #     elif 40<attack_mean_list[i]<=60:\n",
-    "    #         right_mid_quater += 1\n",
-    "    #     else:\n",
-    "    #         far_right_quater +=1\n",
-    "\n",
-    "    # bq_av = far_left_quater/num_shots\n",
-    "    # bmq_av = left_mid_quater/num_shots\n",
-    "    # umq_av = right_mid_quater/num_shots\n",
-    "    # uq_av = far_right_quater/num_shots\n",
-    "\n",
-    "    \n",
-    "     \n",
-    "    \n",
-    "    # pitch = Pitch(pitch_type='statsbomb', orientation='horizontal',\n",
-    "    #           pitch_color='grass', line_color='#c7d5cc', figsize=(13.5, 8),\n",
-    "    #           constrained_layout=True, stripe=True, tight_layout=False)\n",
-    "    # fig, ax = pitch.draw()\n",
-    "\n",
-    "    # plt.plot((60,60+(bq_av*60)),(10,10),'r',linewidth=40)\n",
-    "    # plt.plot((60,60+(bmq_av*60)),(30,30),'r',linewidth=40)\n",
-    "    # plt.plot((60,60+(umq_av*60)),(50,50),'r',linewidth=40)\n",
-    "    # plt.plot((60,60+(uq_av*60)),(70,70),'r',linewidth=40)\n",
-    "\n",
-    "\n",
-    "\n",
-    "l = [1,2,3,4,5,6]\n",
-    "np.mean(l)\n",
-    "np.sum(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Cell magic `%%%` not found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%% code for iterating through x, the number of events before the shot that are considered\n",
-    "\n",
-    "\n",
-    "# for x in range(8,9):\n",
-    "#     left_list = []\n",
-    "#     mid_list=[]\n",
-    "#     right_list=[] \n",
-    "\n",
-    "\n",
-    "#     #Iterates through each match and finds the barca shots, records the minute, second and what possesion it was in\n",
-    "#     for match_id_iter in barcelona_matches.match_id[0:5]:\n",
-    "#         shot_minute = pd.DataFrame()\n",
-    "#         match_iter = sb.events(match_id=match_id_iter)\n",
-    "#         shots = match_iter[(match_iter.type == 'Shot') & (match_iter.team == 'Barcelona')]\n",
-    "#         shot_minute = pd.concat([shot_minute, shots[['minute','second','possession']]], ignore_index=True)\n",
-    "#         #Creates new data frames, dont know if this is necessary\n",
-    "#         previous_events = pd.DataFrame()\n",
-    "\n",
-    "        \n",
-    "#         # ten_previous_events = pd.DataFrame()\n",
-    "#         # ten_previous_events['y_location'] = np.nan\n",
-    "#         attack_mean_list = []\n",
-    "#         #Iterates through each shot event and find the events in an entire minute previous, ONLY COUNTS THE EVENTS IF THEY WERE IN THE SAME 'POSSESSION'\n",
-    "#         for i,row in shot_minute.iterrows():\n",
-    "            \n",
-    "#             ten_previous_events = pd.DataFrame()\n",
-    "#             ten_previous_events['y_location'] = np.nan\n",
-    "\n",
-    "#             previous_events = match_iter[(((match_iter.minute == row.minute) & (match_iter.second <= row.second )) | ((match_iter.minute == (row.minute - 1)) & (match_iter.second >= row.second ))) & (match_iter.possession == row.possession)]\n",
-    "#             #Finding length of this list to allow for loop\n",
-    "#             pe_length = len(previous_events.index)\n",
-    "#             #For loop finds the last x events unless the previous events have less than x entries\n",
-    "#             # x = 4\n",
-    "\n",
-    "#             #If loop solves specific bugs for if pe_length == 1 or is less than x\n",
-    "#             if pe_length == 1:\n",
-    "                \n",
-    "#                 ten_previous_events = previous_events.iloc[0]\n",
-    "                \n",
-    "#             elif pe_length< x:\n",
-    "            \n",
-    "#                 ten_previous_events = previous_events.iloc[-pe_length:-1]\n",
-    "#             else:\n",
-    "#                 ten_previous_events = previous_events.iloc[-x:-1]\n",
-    "\n",
-    "#             #If loop solves specific bugs for if pe_length == 1\n",
-    "#             if pe_length ==1:\n",
-    "#                 y_loc_mean = ten_previous_events.location[1]\n",
-    "#                 attack_mean_list.append(y_loc_mean)\n",
-    "#             else:\n",
-    "#                 for j,row in ten_previous_events.iterrows():\n",
-    "#                     #Finds y coordinate for the previous events and adds them to a new feature\n",
-    "#                     ten_previous_events.loc[j,'y_location'] = row.location[1]\n",
-    "\n",
-    "#                 y_loc_mean = ten_previous_events.y_location.mean()\n",
-    "#                 attack_mean_list.append(y_loc_mean)\n",
-    "\n",
-    "\n",
-    "        \n",
-    "\n",
-    "#         left = 0\n",
-    "#         middle = 0\n",
-    "#         right = 0\n",
-    "\n",
-    "#         num_shots = len(attack_mean_list)\n",
-    "#         for i in range(num_shots):\n",
-    "#             if attack_mean_list[i] <= (80/3):\n",
-    "#                 left +=1\n",
-    "#             elif (80/3)<attack_mean_list[i]<=(160/3):\n",
-    "#                 middle +=1\n",
-    "#             else:\n",
-    "#                 right +=1\n",
-    "\n",
-    "#         left_av = left/num_shots\n",
-    "#         middle_av = middle/num_shots\n",
-    "#         right_av = right/num_shots\n",
-    "        \n",
-    "#         left_list.append(left_av)\n",
-    "#         mid_list.append(middle_av)\n",
-    "#         right_list.append(right_av)\n",
-    "        \n",
-    "        \n",
-    "#         # pitch = Pitch(pitch_type='statsbomb', orientation='horizontal',\n",
-    "#         #         pitch_color='grass', line_color='#c7d5cc', figsize=(13.5, 8),\n",
-    "#         #         constrained_layout=True, stripe=True, tight_layout=False)\n",
-    "#         # fig, ax = pitch.draw()\n",
-    "\n",
-    "#         # plt.plot((60,(60+(left_av*60))),(20,20),'r',linewidth=60,solid_capstyle='butt')\n",
-    "#         # plt.plot((60,(60+(middle_av*60))),(40,40),'b',linewidth=60,solid_capstyle='butt')\n",
-    "#         # plt.plot((60,(60+(right_av*60))),(60,60),'m',linewidth=60,solid_capstyle='butt')\n",
-    "\n",
-    "#         # x_lab = 45\n",
-    "#         # y_lab = [20,40,60]\n",
-    "#         # percent_labels = [str(round(left_av*100,1))+'%',str(round(middle_av*100,1))+'%',str(round(right_av*100,1))+'%']\n",
-    "\n",
-    "#         # for i,txt in enumerate(percent_labels):\n",
-    "#         #     ax.annotate(txt,[x_lab,y_lab[i]])\n",
-    "#     print(np.mean(left_list),np.mean(mid_list),np.mean(right_list))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # from 2 - 5\n",
-    "# #0.15136554621848738 0.7124649859943978 0.13616946778711486\n",
-    "# # 0.1302170868347339 0.7819677871148459 0.08781512605042016\n",
-    "# # 0.05416666666666666 0.8580182072829132 0.08781512605042016"
-   ]
   }
  ],
  "metadata": {
