cleaned up code

--- a/player_xT.ipynb
+++ b/player_xT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,40 +76,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'Lionel Andrés Messi Cuccittini': 23.81225338000007,\n",
+       " 'Jordi Alba Ramos': 10.97988079000002,\n",
        " 'Ousmane Dembélé': 6.402278439999996,\n",
        " 'Sergio Busquets i Burgos': 5.422392220000017,\n",
+       " 'Clément Lenglet': 5.267802529999989,\n",
+       " 'Frenkie de Jong': 4.581067459999993,\n",
+       " 'Antoine Griezmann': 2.777358930000002,\n",
        " 'Sergino Dest': 2.679686669999989,\n",
        " 'Óscar Mingueza García': 2.4430450400000048,\n",
-       " 'Frenkie de Jong': 4.581067459999993,\n",
-       " 'Clément Lenglet': 5.267802529999989,\n",
-       " 'Marc-André ter Stegen': 0.7737900899999975,\n",
-       " 'Jordi Alba Ramos': 10.97988079000002,\n",
-       " 'Pedro González López': 2.0218321699999975,\n",
-       " 'Antoine Griezmann': 2.777358930000002,\n",
-       " 'Ronald Federico Araújo da Silva': 0.7456351199999998,\n",
-       " 'Moriba Kourouma Kourouma': 0.5523298499999996,\n",
-       " 'Francisco António Machado Mota de Castro Trincão': 0.15380217999999996,\n",
-       " 'Ricard Puig Martí': 0.61336465,\n",
-       " 'Martin Braithwaite Christensen': -0.20231261999999975,\n",
-       " 'Gerard Piqué Bernabéu': 1.8737744199999977,\n",
        " 'Sergi Roberto Carnicer': 2.026318290000003,\n",
-       " 'Samuel Yves Umtiti': 0.6661864700000002,\n",
-       " 'Miralem Pjanić': 1.632630570000001,\n",
+       " 'Pedro González López': 2.0218321699999975,\n",
+       " 'Gerard Piqué Bernabéu': 1.8737744199999977,\n",
        " 'Philippe Coutinho Correia': 1.7922680100000024,\n",
-       " 'Héctor Junior Firpo Adames': 0.2761439599999998,\n",
        " 'Anssumane Fati': 1.7687659500000008,\n",
+       " 'Miralem Pjanić': 1.632630570000001,\n",
+       " 'Marc-André ter Stegen': 0.7737900899999975,\n",
+       " 'Ronald Federico Araújo da Silva': 0.7456351199999998,\n",
+       " 'Samuel Yves Umtiti': 0.6661864700000002,\n",
+       " 'Ricard Puig Martí': 0.61336465,\n",
+       " 'Moriba Kourouma Kourouma': 0.5523298499999996,\n",
+       " 'Héctor Junior Firpo Adames': 0.2761439599999998,\n",
+       " 'Francisco António Machado Mota de Castro Trincão': 0.15380217999999996,\n",
        " 'Norberto Murara Neto': 0.09667133999999998,\n",
-       " 'Carles Aleña Castillo': 0.018155429999999993}"
+       " 'Carles Aleña Castillo': 0.018155429999999993,\n",
+       " 'Martin Braithwaite Christensen': -0.20231261999999975}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,12 +139,13 @@
     "                        playersxT[event[\"player\"][\"name\"]] += value \n",
     "    file.close()\n",
     "\n",
+    "playersxT=dict(sorted(playersxT.items(),reverse=True,key= lambda x:x[1]))\n",
     "playersxT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
